--- a/portfolio.css
+++ b/portfolio.css
@@ -11,3 +11,6 @@ font-family: 'Lato', sans-serif;
 #starwars{
   font-family: 'Noto Sans', sans-serif;
 }
+#Freedom{
+  font-family: 'Noto Sans', sans-serif;
+}
